--- a/index.html
+++ b/index.html
@@ -225,25 +225,28 @@
     }
 
     function generateCSV() {
-      const prompts = document.getElementById("prompts").value.trim().split("\n");
-      let csv = "Filename,Title,Keywords,Category,Releases\n";
+  const prompts = document.getElementById("prompts").value.trim().split("\n");
+  let csv = "Filename,Title,Keywords,Category,Releases\n";
 
-      for (let i = 0; i < droppedFiles.length; i++) {
-        const file = droppedFiles[i];
-        const prompt = getPrompt(i, file, prompts);
-        const title = generateTitle(prompt);
-        const tags = generateTags(prompt);
-        const category = getCategory(prompt);
+  for (let i = 0; i < droppedFiles.length; i++) {
+    const file = droppedFiles[i];
+    const prompt = getPrompt(i, file, prompts);
+    const title = generateTitle(prompt);
+    const tags = generateTags(prompt);
+    const category = getCategory(prompt);
 
-        csv += `"${file.name}","${title}","${tags}","${category}",""\n`;
-      }
+    csv += `"${file.name}","${title}","${tags}","${category}",""\n`;
+  }
 
-      const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
-      const a = document.createElement("a");
-      a.href = URL.createObjectURL(blob);
-      a.download = "metadata.csv";
-      a.click();
-    }
+  const blob = new Blob([csv], { type: "text/csv;charset=utf-8;" });
+  const a = document.createElement("a");
+  a.href = URL.createObjectURL(blob);
+
+  const timestamp = new Date().toISOString().replace(/[:.]/g, "-");
+  a.download = `metadata_${timestamp}.csv`;
+
+  a.click();
+}
   </script>
 
 </body>
